--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
+    - text: "Mexico"
+      href: Blog1.html
     - text: "About"
       href: about.html
 output: distill::distill_article
