--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,7 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - icon: fa fa-github
+      href: https://github.com/xxranliu
 output: distill::distill_article
+theme: theme.css
